# vaultcrdt-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dogfooding-checklist.md  esbuild.config.mjs  main.js  manifest.json  next-session-handoff.md  package.json  tsconfig.json  versions.json  vitest.config.mts
.agent-memory/: config.json  links.json
.agent-memory/_generated/: INDEX.md  MEMORY.md  RULES.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: reviewer.md
.pi/: SYSTEM.md  settings.json
crates/vaultcrdt-crdt/: Cargo.toml
crates/vaultcrdt-crdt/src/: diffing.rs  document.rs  lib.rs  tests.rs
crates/vaultcrdt-wasm/: Cargo.toml
crates/vaultcrdt-wasm/src/: lib.rs
docs/: freundin-handoff.md  freundin-smoke-test.md  install-brat.md  next-session-onboarding.md  next-session-prompt.md  next-session-review.md
gpt-audit/: 01-proposal-initial-sync-consistency.md  02-proposal-path-and-file-policy.md  03-proposal-delete-tombstone-model.md  04-proposal-wasm-source-artifact-sync.md  07-proposal-multi-editor-consistency.md  09-decision-matrix.md  10-minimal-safe-private-release.md  12-risk-register.md  README.md  claude-response.md  next-session-phase-b.md  previous-cycles.md
scripts/: build-wasm.sh  check-wasm-fresh.sh
setup-paket/: arbeitsmodell.md  projektkontext.md
src/: awareness-state.ts  conflict-utils.ts  document-manager.ts  editor-integration.ts  file-watcher.ts  logger.ts  main.ts  onboarding-modal.ts  path-policy.ts  promise-manager.ts  push-handler.ts  settings.ts  setup-modal.ts  startup-dirty-tracker.ts  state-storage.ts  sync-engine.ts  sync-initial.ts  sync-trace.ts  url-policy.ts  wasm-bridge.ts
wasm/: vaultcrdt_wasm.d.ts  vaultcrdt_wasm.js  vaultcrdt_wasm_bg.wasm  vaultcrdt_wasm_bg.wasm.d.ts
(+110 files in other folders)
